<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true">

    <TextView
        android:id="@+id/mostrarResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/gridlayout"
        android:layout_alignParentTop="true"
        android:gravity="bottom"
        android:text="prueba"
        android:textAlignment="viewEnd"
        android:textSize="50sp"
        tools:ignore="RtlCompat" />

    <GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:columnCount="4"
        android:rowCount="4">

        <Button
            android:id="@+id/numero_7"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/_7" />

        <Button
            android:id="@+id/numero_8"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/_8" />

        <Button
            android:id="@+id/numero_9"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/_9" />

        <Button
            android:id="@+id/numero_4"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/_4" />

        <Button
            android:id="@+id/numero_5"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/_5" />

        <Button
            android:id="@+id/numero_6"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/_6" />

        <Button
            android:id="@+id/multiplicacion"
            style="@style/AppTheme.BotonCalculadora.Rojo"
            android:layout_row="1"
            android:layout_column="3"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="@string/mult" />

        <Button
            android:id="@+id/division"
            style="@style/AppTheme.BotonCalculadora.Rojo"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:text="@string/divi" />

        <Button
            android:id="@+id/numero_1"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:gravity="center"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/_1" />

        <Button
            android:id="@+id/numero_2"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/_2" />

        <Button
            android:id="@+id/numero_3"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/_3" />

        <Button
            android:id="@+id/restar"
            style="@style/AppTheme.BotonCalculadora.Rojo"
            android:layout_row="2"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:text="@string/resta" />

        <Button
            android:id="@+id/punto"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/punto" />

        <Button
            android:id="@+id/cero"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/_0" />

        <Button
            android:id="@+id/igual"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/igual" />

        <Button
            android:id="@+id/sumar"
            style="@style/AppTheme.BotonCalculadora.Rojo"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:text="@string/suma" />
    </GridLayout>

</RelativeLayout>